Fix button styling on mobile devices

--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -17,7 +17,7 @@ button, a[button] {
 	background:linear-gradient(-60deg, rgba(135,0,255,1), rgba(255,0,158,1));
 	box-shadow:0 0 120px transparent, 0 4px 12px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.1), inset 0 1px 1px rgba(255,255,255,0.4), 0 0 0 0 rgba(109,68,244,0.2);
 
-	@include media(max-width-550) {
+	@include media(max-width-642) {
 		width:100%;
 	}
 
@@ -62,38 +62,15 @@ button, a[button] {
 		background:var(--boxes-color);
 		box-shadow:0 0 120px transparent, 0 4px 12px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.1), inset 0 1px 1px rgba(255,255,255,0.2), 0 0 0 0 rgba(109,68,244,0.2);
 
+		@include media(max-width-642) {
+			width:100%;
+		}
+
 		div {
 			width:100%;
 			height:100%;
 			display:flex;
 			padding:12px 20px;
-			border-radius:50px;
-			align-items:center;
-			justify-content:center;
-		}
-
-		&:hover {
-			transform:scale(1.06);
-			color:var(--text-color);
-			--generate-button-shadow-inset:rgba(255,255,255,0.7);
-			background:linear-gradient(-60deg, rgba(135,0,255,1), rgba(255,0,158,1));
-			box-shadow:0 0 30px rgba(255,0,158,0.5), 0 4px 12px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.2), inset 0 1px 1px var(--generate-button-shadow-inset, rgba(255,255,255,0.6)), 0 0 0 4px rgba(150,0,255,0.3);
-		}
-
-	}
-
-	&[bordered][center] {
-		padding:3px;
-		color: var(--faint-color);
-		background:var(--boxes-color);
-		box-shadow:0 0 120px transparent, 0 4px 12px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.1), inset 0 1px 1px rgba(255,255,255,0.2), 0 0 0 0 rgba(109,68,244,0.2);
-
-		div {
-			width:100%;
-			height:100%;
-			display:flex;
-			padding-left:20px;
-			padding-right:20px;
 			border-radius:50px;
 			align-items:center;
 			justify-content:center;
